--- a/public/locale/ru/translation.json
+++ b/public/locale/ru/translation.json
@@ -37,5 +37,11 @@
     },
     "description": {
         "headerDefault": "Приложение для игры в JS-Quiz, на фрейморке Remix!"
-    }
+    },
+	"footer": {
+		"date": "Сегодня {{date, DATE_HUGE}}",
+		"date_morning": "Сейчас {{date, DATE_HUGE}} | Доброе утро!",
+		"date_afternoon": "Сейчас {{date, DATE_HUGE}} | Добрый день!",
+        "date_evening": "Сейчас {{date, DATE_HUGE}} | Добрый вечер!"
+	}
 }
