move header styles to root route

--- a/public/locales/en/rules.json
+++ b/public/locales/en/rules.json
@@ -1,4 +1,5 @@
 {
+    "header": "Rules",
     "first": "1 game - 1 host and N participants",
     "second": "Each game host prepares questions at his discretion, these can be tasks, theoretical questions, etc.",
     "third": "The host determines the format for asking questions.",
