--- a/public/locales/ru/rules.json
+++ b/public/locales/ru/rules.json
@@ -1,4 +1,5 @@
 {
+    "header": "Правила",
     "first": "1 игра - 1 ведущий и N участников",
     "second": "Каждую игру ведущий подготавливает вопросы на свое усмотрение, это могут быть задачи, теоретические вопросы и т.д.",
     "third": "Формат задания вопросов ведущий определяет сам.",
