--- a/public/locales/ru/translation.json
+++ b/public/locales/ru/translation.json
@@ -8,5 +8,15 @@
         "headerDefault": "Приложение для игры в JS-Quiz, на фрейморке Remix!",
         "headerRules": "Правила игры в JS-Quiz",
         "headerLogin": "Залогинься чтобы принять участие или создать свою игру!"
+    },
+    "errors": {
+        "formSubmit": "Форма заполнена не корректно",
+        "nameLength": "Имя пользователя должно быть не короче 3-ёх символов",
+        "passwordLength": "Пароль должен быть не короче 6-ти символов",
+        "role": "Роль должна быть админ или игрок",
+        "wrongLogin": "Комбинация Имя пользователя/Пароль неверна",
+        "userExist": "Пользователь с именем {{username}} уже существует",
+        "failRegister": "Что-то пошло не так, попробуйте создать нового пользователя",
+        "wrongLoginType": "Неверный тип логина"
     }
 }
